close bar button through code

--- a/Day3iOSPassingDataToViewController/Base.lproj/Main.storyboard
+++ b/Day3iOSPassingDataToViewController/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                     <action selector="btnGoNext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="P57-Zc-PsX"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Enter your name" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dqC-mL-KBB">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dqC-mL-KBB">
                                 <rect key="frame" x="82" y="294" width="264" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
