--- a/Day3iOSPassingDataToViewController/Base.lproj/Main.storyboard
+++ b/Day3iOSPassingDataToViewController/Base.lproj/Main.storyboard
@@ -30,12 +30,17 @@
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Shn-ko-BEh">
+                                <rect key="frame" x="0.0" y="646" width="414" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="3fT-96-QTM"/>
                     <connections>
+                        <outlet property="pickerCountry" destination="Shn-ko-BEh" id="bjd-ua-sgD"/>
                         <outlet property="textName" destination="dqC-mL-KBB" id="3iN-GU-tGl"/>
                     </connections>
                 </viewController>
